[Complete]Add style.css, update app.js and update index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css"/>
     <title>Document</title>
 </head>
 <body>
-    <script src="./app.js"></script>
+    <h1 class="title">Hello!</h1>
+    <button class="addListBtn">Click me</button>
+
+    <ul class="name-list">
+        <li>Ed</li>
+        <li>Jon</li>
+        <li>Jon</li>
+        <li>Boy</li>
+        <li>Harry</li>
+    </ul>
+    <input class="list-input" type="text"/>
+    
 </body>
+<script src="./app.js"></script>
 </html>
 
